alignment problem fixed

--- a/public/main.css
+++ b/public/main.css
@@ -33,6 +33,7 @@ main{
   padding-top: 20px;
   background-color: white;
   padding: 10px;
+  text-align:center;
 }
 
 html {
@@ -393,10 +394,9 @@ a:link{
   line-height: 2;
 }
 .grammarCard{
-  display:flex;
-  float:left;
-  margin: 10px;
-  justify-content: center;
+  text-align:left;
+  display: inline-block;
+  margin: 10px
 }
 
 .MuiPaper-root.MuiCard-root.makeStyles-root-1.MuiPaper-elevation1.MuiPaper-rounded{
@@ -458,9 +458,6 @@ table, th, td {
 }
 */
 @media only screen and (max-width: 1025px) {
-  .grammarCard{
-    float:none
-  }
   .social{
     display:none
   }
@@ -480,4 +477,10 @@ table, th, td {
       "main       main  main"
       "footer    footer footer";
   }
+}
+
+.introCard{
+  text-align:left;
+  display: inline-block;
+  margin: 10px
 }
